--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -27,7 +27,7 @@
          </property>
          <property
                name="aboutText"
-               value="Canadian BioSample Repository&#x0A;Version {0}&#x0A;by AICML">
+               value="BioBank2 Java Client&#x0A;Version {0}&#x0A;&#x0A;Devoped for the Canadian BioSample Repository by AICML .&#x0A;&#x0A;Canadian BioSample Repository: http://www.biosample.ca&#x0A;AICML: http://aicml.cs.ualberta.ca">
          </property>
          <property
                name="aboutImage"
