resolves #930: a "Shorcut" menu has been added and display the key assist dialog. (Didn't find how to export with the default menu)

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -10,5 +10,5 @@ bin.includes = META-INF/,\
                .options,\
                about.mappings,\
                lib/
-bin.excludes = lib/.donotdeleteme
 custom = true
+javacProjectSettings = true
