--- a/build.xml
+++ b/build.xml
@@ -9,8 +9,8 @@
     <arg value="-f"/>
   </exec>
 
-  <property name="server.version.num" value="1.3.1"/>
-  <property name="java.client.version.num" value="1.3.4.pre"/>
+  <property name="server.version.num" value="1.4.0.pre"/>
+  <property name="java.client.version.num" value="1.4.0.pre"/>
 
   <property environment="env" />
   <property name="host" value="aicml-med.cs.ualberta.ca" />
