--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -9,7 +9,10 @@ bin.includes = META-INF/,\
                plugin_customization.ini,\
                .options,\
                about.mappings,\
-               lib/
-bin.excludes = lib/.donotdeleteme
-custom = true
+               README,\
+               about.ini,\
+               about.properties,\
+               biobank32.png,\
+               lib/,\
+               plugin.properties
 javacProjectSettings = true
